# ccHermesAgents

./: .gitignore  api-design-v0.1.md  database-ddl-v0.1.md  hermes-agent-software-team-design-v1.4.md  hermes-agent-software-team-design-v1.5.md  pyproject.toml
app/: main.py
app/agents/: executor.py  prompt_builder.py  registry.py  research.py
app/agents/roles/: dev.yaml  pdm.yaml  research.yaml  research_judge.yaml  sec.yaml  test.yaml
app/confirmations/: router.py  service.py
app/core/: config.py  db.py
app/escalations/: router.py  service.py
app/feishu/: router.py  security.py
app/issues/: router.py  service.py
app/models/: __init__.py  artifact.py  confirmation.py  escalation.py  issue.py  project.py  review.py  task.py  task_contract.py  task_run.py
app/patrol/: scheduler.py
app/projects/: router.py  service.py
app/reviews/: router.py  service.py
app/runners/: artifact_collector.py  claude_code_runner.py  contract_checker.py  openai_runner.py  policy.py  types.py  worker.py  workspace_manager.py
app/schemas/: common.py  project.py
app/tasks/: contracts.py  router.py  service.py
docs/superpowers/plans/: 2026-05-18-hermes-all-phases-implementation.md  2026-05-18-hermes-design-doc-optimization.md  2026-05-19-hermes-linux-server-execution.md  (+1 more)
scripts/: generate_test_checklist.py  smoke_runner.py
tests/integration/: helpers.py  test_confirmation_api.py  test_escalation_api.py  test_feishu_router.py  test_issue_api.py  test_project_api.py  test_review_api.py  test_task_start_api.py
tests/unit/: test_bootstrap.py
(+16 files in other folders)
