[project]
name = "cc-hermes-agent"
version = "0.1.0"
description = "Hermes Agent multi-agent software engineering team"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "dramatiq[redis]>=1.17.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.0",
  "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
